manifests/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bike-touring-tracker-deployment
  labels:
    app: bike-touring-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bike-touring-tracker
  template:
    metadata:
      labels:
        app: bike-touring-tracker
    spec:
      containers:
      - name: bike-touring-tracker
        image: phillebaba/bike-touring-tracker:test
        imagePullPolicy: Always
        command: ["/app/test"]
        args: ["-postgres-host", "postgres.btt.svc.cluster.local"]
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres
        ports:
        - containerPort: 5432
