manifests/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bike-tour-tracker-service
spec:
  selector:
    app: bike-tour-tracker
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: postgres
