manifests/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: btt-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik-public"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
  - hosts:
    - pipencyklarfel.com
  rules:
  - host: pipencyklarfel.com
    http:
      paths:
      - path: /
        backend:
          serviceName: btt-service
          servicePort: 80
